# crust

./: .gitignore  Cargo.toml
src/: aur.rs  cmd.rs  main.rs  main.rs.bak  pkg.rs  utils.rs
